Serving static assets via asset-rack
closes #1405
- adds asset-rack to package for serving assets
- moves all assets previously served via express.static into an asset rack
- handles url generation for statically served assets
- updates the asset-helper for hbs-templates to get the right url
- allows configuration of local-asstets-deployment directory and CDN

--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -17,20 +17,21 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Ghost" />
 
-    <link rel="shortcut icon" href="{{asset "favicon.ico"}}" />
-    <link rel="apple-touch-icon-precomposed" href="{{asset "img/touch-icon-iphone.png" ghost="true"}}" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{asset "img/touch-icon-ipad.png" ghost="true"}}" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{asset "img/small.png" ghost="true"}}" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{asset "img/medium.png" ghost="true"}}" />
+    <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
+    <link rel="apple-touch-icon-precomposed" href="{{asset "ghost/img/touch-icon-iphone.png"}}" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{asset "ghost/img/touch-icon-ipad.png"}}" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{asset "ghost/img/small.png"}}" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{asset "ghost/img/medium.png"}}" />
 
-    <meta name="application-name" content="Ghost" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-square70x70logo" content="{{asset "img/small.png" ghost="true"}}" />
-    <meta name="msapplication-square150x150logo" content="{{asset "img/medium.png" ghost="true"}}" />
-    <meta name="msapplication-square310x310logo" content="{{asset "img/large.png" ghost="true"}}" />
+    <meta name="application-name" content="Ghost"/>
+    <meta name="msapplication-TileColor" content="#ffffff"/>
+    <meta name="msapplication-square70x70logo" content="{{asset "ghost/img/small.png"}}" />
+    <meta name="msapplication-square150x150logo" content="{{asset "ghost/img/medium.png"}}" />
+    <meta name="msapplication-square310x310logo" content="{{asset "ghost/img/large.png"}}" />
 
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,300,700" />
-    <link rel="stylesheet" href="{{asset "css/ghost-ui.min.css" ghost="true"}}" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,300,700">
+    <link rel="stylesheet" href="{{asset "ghost/css/screen.css"}}">
+    {{{block "pageStyles"}}}
 </head>
 <body class="{{bodyClass}}{{update_notification classOnly="true"}}">
     {{#unless hideNavbar}}
