Add "Back to Blog" Link to Login Page
Issue #1709

--- a/core/client/tpl/login.hbs
+++ b/core/client/tpl/login.hbs
@@ -7,6 +7,8 @@
     </div>
     <button class="button-save" type="submit">Log in</button>
     <section class="meta">
-        <a class="forgotten-password" href="/ghost/forgotten/">Forgotten password?</a>{{! &bull; <a href="/ghost/signup/">Register new user</a>}}
+        <a class="back-to-blog" href="/">Back to Blog</a>
+        &bull; <a class="forgotten-password" href="/ghost/forgotten/">Forgotten password?</a>
+        {{! &bull; <a href="/ghost/signup/">Register new user</a>}}
     </section>
 </form>
