Delete all content (posts and tags)
closes #1445
- added delete button to ‚ugly debug tools‘
- added api call to delete all content
- added /db to cache invalidation routes

--- a/core/server/views/debug.hbs
+++ b/core/server/views/debug.hbs
@@ -36,6 +36,15 @@
                     </div>
                 </fieldset>
             </form>
+            <form id="settings-resetdb">
+                <fieldset>
+                    <div class="form-group">
+                        <label>Delete all Content</label>
+                        <a href="javascript:void(0);" class="button-delete js-delete">Delete</a>
+                        <p>Delete all posts and tags from the database.</p>
+                    </div>
+                </fieldset>
+            </form>
         </section>
     </section>
 </div>
