--- a/ghost/admin/assets/sass/layouts/users.scss
+++ b/ghost/admin/assets/sass/layouts/users.scss
@@ -146,6 +146,7 @@
         line-height: 0;
         width: 100%;
         height: auto;
+        min-height: 180px;
     }
 
     .edit-cover-image {
