--- a/ghost/admin/tpl/settings/user-profile.hbs
+++ b/ghost/admin/tpl/settings/user-profile.hbs
@@ -9,7 +9,8 @@
 <section class="content no-padding">
 
     <header class="user-profile-header">
-        <img id="user-cover" class="cover-image" src="{{#if cover}}{{cover}}{{else}}/shared/img/user-cover.png{{/if}}" title="{{name}}'s Cover Image"/>
+        <img id="user-cover" class="cover-image" src="{{#if cover}}{{cover}}{{else}}{{asset "shared/img/user-cover.png"}}{{/if}}" title="{{name}}'s Cover Image"/>
+
         <a class="edit-cover-image js-modal-cover button" href="#">Change Cover</a>
     </header>
 
@@ -18,7 +19,7 @@
         <fieldset class="user-details-top">
 
             <figure class="user-image">
-                <div id="user-image" class="img" {{#if image}}style="background-image: url({{image}});"{{/if}} href="#"><span class="hidden">{{name}}'s Picture</span></div>
+                <div id="user-image" class="img" style="background-image: url({{#if image}}{{image}}{{else}}{{asset "shared/img/user-image.png"}}{{/if}});" href="#"><span class="hidden">{{name}}'s Picture</span></div>
                 <a href="#" class="edit-user-image js-modal-image">Edit Picture</a>
             </figure>
 
