--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,6 +91,15 @@
           </a>
         </li>
         <li>
+          <a href="{{ site.url }}/{% if page.lang %}{{page.lang}}/{% endif %}ghost-hosted-platform/">
+            {% if page.lang %}
+              {{site.translations.[page.lang].ghost-hosted-platform}}
+            {% else %}
+              Ghost Hosted Platform
+            {% endif %}
+          </a>
+        </li>
+        <li>
           <a href="http://ghost.org/forum/">
             {% if page.lang %}
               {{site.translations.[page.lang].help}}
