--- a/_layouts/ghost-hosted-platform.html
+++ b/_layouts/ghost-hosted-platform.html
@@ -7,6 +7,7 @@ layout: default
         <aside id="sidebar" class="col-lg-3">
             <nav class="bs-sidebar">
                 <ul class="nav bs-sidenav">
+                    <li><a href="#start">How do I Start a Blog?</a></li>
                     <li><a href="#support">Where do I go with a Ghost hosted platform problem / query? </a></li>
                     <li><a href="#install-theme">How do I install a Theme?</a></li>
                     <li><a href="#ftp-support">Is there FTP support?</a></li>
