--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -18,7 +18,7 @@
 
 .editor {
 
-    #notifications {
+    .notifications {
         @include breakpoint($biggerthan-mobile) {
             bottom: 40px;
         }
