Move modal-container styling from an ID to a class

--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -1031,7 +1031,7 @@ nav {
 /* ==========================================================================
    Modals
    ========================================================================== */
-#modal-container {
+.modal-container {
     @include box-sizing(border-box);
     display: none;
     position: fixed;
