--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -51,7 +51,7 @@
         </div>
     </main>
 
-    <div id="modal-container">
+    <div id="modal-container" class="modal-container">
     </div>
     <div class="modal-background fade"></div>
 
