add a transparent border around inputs
this prevents the visual jump that happens on initial
input focus.

--- a/core/client/assets/sass/layouts/auth.scss
+++ b/core/client/assets/sass/layouts/auth.scss
@@ -207,7 +207,7 @@
         width: 280px;
         padding: 8px 10px;
         position: relative;
-        border: none;
+        border: solid 1px transparent;
         color: #fff;
         font-size: 1.1em;
         font-weight: 200;
