--- a/ghost/admin/templates/editor.hbs
+++ b/ghost/admin/templates/editor.hbs
@@ -8,7 +8,7 @@
     <section class="entry-markdown active">
         <header class="floatingheader">
             <small>Markdown</small>
-            <a class="markdown-help" href="#"><span class="hidden">What is Markdown?</span></a>
+            <a class="markdown-help" href="" {{action "openModal" "markdown"}}><span class="hidden">What is Markdown?</span></a>
         </header>
         <section id="entry-markdown-content" class="entry-markdown-content">
             {{-codemirror value=markdown scrollPosition=view.scrollPosition}}
