--- a/ghost/admin/templates/settings/debug.hbs
+++ b/ghost/admin/templates/settings/debug.hbs
@@ -26,7 +26,7 @@
         <fieldset>
             <div class="form-group">
                 <label>Delete all Content</label>
-                <a href="javascript:void(0);" class="button-delete js-delete">Delete</a>
+                <a href="javascript:void(0);" class="button-delete js-delete" {{action "openModal" "deleteAll"}}>Delete</a>
                 <p>Delete all posts and tags from the database.</p>
             </div>
         </fieldset>
