--- a/ghost/admin/templates/settings/user.hbs
+++ b/ghost/admin/templates/settings/user.hbs
@@ -73,12 +73,12 @@
 
             <div class="form-group">
                 <label for="user-password-new">New Password</label>
-                {{input value=newpassword type="password" id="user-password-new"}}
+                {{input value=newPassword type="password" id="user-password-new"}}
             </div>
 
             <div class="form-group">
                 <label for="user-new-password-verification">Verify Password</label>
-                {{input value=ne2password type="password" id="user-new-password-verification"}}
+                {{input value=ne2Password type="password" id="user-new-password-verification"}}
             </div>
             <div class="form-group">
                 <button type="button" class="button-delete button-change-password" {{action 'password'}}>Change Password</button>
