Refactor navbar to eliminate nested {{link-to}}.
no related issue

This is essentially setting up a binding from the `LinkView`'s `active`
status and whatever is set as `alternativeActive` in the `{{link-to}}`
(in our case the `activating-list-item` component.

Screenshots showing that the proper CSS classes are given:

![screenshot](http://monosnap.com/image/tzOH6n82rIVGNEFAUWVOLN52QuASQ4.png)

![screenshot](http://monosnap.com/image/5gmcwJcj0kgEXt8lnET4OKgIZ8KRpH.png)

![screenshot](http://monosnap.com/image/UCVNukTXLMNfVneLhzwVyhkrVlGSBt.png)

--- a/core/client/templates/-navbar.hbs
+++ b/core/client/templates/-navbar.hbs
@@ -4,17 +4,9 @@
     </a>
     <nav id="global-nav" role="navigation">
         <ul id="main-menu" >
-            {{!-- @TODO: don't nest link-to attributes
-                currently required to get proper class styling --}}
-            {{#link-to "posts" class="content" tagName="li" disabled=true}}
-                {{#link-to "posts"}}Content{{/link-to}}
-            {{/link-to}}
-            {{#link-to "new" class="editor" tagName="li" disabled=true}}
-                {{#link-to "new"}}New post{{/link-to}}
-            {{/link-to}}
-            {{#link-to "settings" class="settings" tagName="li" disabled=true}}
-                {{#link-to "settings"}}Settings{{/link-to}}
-            {{/link-to}}
+            {{activating-list-item route="posts" title="Content" classNames="content"}}
+            {{activating-list-item route="new" title="New post" classNames="content"}}
+            {{activating-list-item route="settings" title="Settings" classNames="content"}}
 
             <li id="usermenu" class="usermenu subnav">
                 <a href="#" class="dropdown">
