--- a/core/client/templates/settings/debug.hbs
+++ b/core/client/templates/settings/debug.hbs
@@ -3,31 +3,38 @@
 </header>
 <section class="content">
     <form id="settings-export">
-        <input type="hidden" name="_csrf" value="{{csrfToken}}" />
         <fieldset>
             <div class="form-group">
                 <label>Export</label>
-                <a href="{{admin_url}}/export/" class="button-save">Export</a>
+                <a class="button-save" {{bind-attr href=model.exportPath}}>Export</a>
                 <p>Export the blog settings and data.</p>
             </div>
         </fieldset>
     </form>
-    <form id="settings-import" enctype="multipart/form-data">
+    {{#gh-form id="settings-import" enctype="multipart/form-data"}}
         <fieldset>
             <div class="form-group">
                 <label>Import</label>
-                <input type="file" class="button-add" name="importfile" id="importfile" />
-                <button type="submit" class="button-save" value="Import" id="startupload" >Import</button>
+                {{file-upload onUpload="importData" uploadButtonText=uploadButtonText}}
                 <p>Import from another Ghost installation. If you import a user, this will replace the current user & log you out.</p>
             </div>
         </fieldset>
-    </form>
+    {{/gh-form}}
     <form id="settings-resetdb">
         <fieldset>
             <div class="form-group">
                 <label>Delete all Content</label>
                 <a href="javascript:void(0);" class="button-delete js-delete" {{action "openModal" "deleteAll"}}>Delete</a>
                 <p>Delete all posts and tags from the database.</p>
+            </div>
+        </fieldset>
+    </form>
+    <form id="settings-testmail">
+        <fieldset>
+            <div class="form-group">
+                <label>Send a test email</label>
+                <button type="submit" id="sendtestmail" class="button-save" {{action "sendTestEmail"}}>Send</button>
+                <p>Sends a test email to your address.</p>
             </div>
         </fieldset>
     </form>
